JSONata mapping and ExchangeRateResponse record
Introduce a JSONata transformation for building localized quotes and convert ExchangeRateResponse to a Java record with defensive copies.

- Add mapping/localized-quote.jsonata and route logic to convert the aggregated POJOs to a Map (via ObjectMapper), run the JSONata transformation, and unmarshal the result to LocalizedOrderQuote. This centralizes the output formatting in a JSONata template and removes manual assembly of the quote in code.
- Add ObjectMapper/TypeReference usage and ensure responses are converted to String before Jackson unmarshalling in downstream HTTP calls.
- Store targetCurrency in the aggregation map so the JSONata template can access it.
- Replace the ExchangeRateResponse POJO with a record and use Map.copyOf for defensive immutability; update accessor and related annotations accordingly.

These changes improve transformation separation, immutability, and make the route easier to maintain.